--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width">
      <title>Web Design | Welcome</title>
-     <link rel="stylesheet" href="./CSS/Style.css ">
+     <link rel="stylesheet" href="./style.css ">
 </head>
 <body>
 
@@ -51,15 +51,15 @@
 <section id="menus">
      <div class="container">
           <div class="menu">
-               <img src="../webdesign/IMG/signaturecake.png"><br/>
+               <img src="./signaturecake.png"><br/>
                 <a href="sign_cake.html" <button class="button_1">Signature Cakes</button></a>
           </div>
           <div class="menu">
-               <img src="../webdesign/IMG/customizecake.png"><br/>
+               <img src="./customizecake.png"><br/>
                <a href="cus_cake.html" <button class="button_1">Customize Cakes</button></a>
           </div>
           <div class="menu">
-               <img src="../webdesign/IMG/reg_cake.png"><br/>
+               <img src="./reg_cake.png"><br/>
                <a href="reg_cake.html" <button class="button_1"> Regular Cakes</button></a>
           </div>
      </div>
