--- a/sign_cake.html
+++ b/sign_cake.html
@@ -4,7 +4,7 @@
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width">
      <title>Web Design | </title>
-     <link rel="stylesheet" href="./CSS/Style.css ">
+     <link rel="stylesheet" href="./style.css ">
 </head>
 <body>
 
