--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Web Design | Menu</title>
-<link rel="stylesheet" href="./CSS/Style.css ">
+<link rel="stylesheet" href="./style.css ">
 </head>
 <body>
       
