--- a/about.html
+++ b/about.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <title>Web Design | About</title>
-<link rel="stylesheet" href="./CSS/Style.css ">
+<link rel="stylesheet" href="./style.css ">
 </head>
 <body>
-      
 <header>
      <div class="container">
          <div id="branding">
@@ -33,4 +32,5 @@
      <p>Creamy web design,copywrite &copy; 2017</p>
 </footer>
 </body>
+</html>
 
